style.css
.container {
    display: flex;
    flex-wrap: wrap;
    width: 512px;
    height: 512px;
    border: 0.5px solid black;

}

.square {
    width: 32px;
    aspect-ratio: 1/1;
    border: 0.5px solid black;
    box-sizing: border-box;
}

